# local_comm

./: LICENSE  README.md  pyproject.toml
examples/: client.py  server.py  simple_client.py  simple_server.py
local_comm/: __init__.py  _local_comm.py
test/: test.py
